home/namespaced/open-webui/ollama-statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama
spec:
  template:
    spec:
      containers:
      - name: ollama
        resources:
          limits:
            cpu: 4000m
            memory: 16Gi
            nvidia.com/gpu: "1"
  volumeClaimTemplates:
  - metadata:
      name: ollama-volume
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 300Gi
      storageClassName: openebs-lvmpv
