home/namespaced/open-webui/delete-ingress-patch.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
